# https-request

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
include/: endpoint.h  endpoint.hpp  openssl.hpp  socket.h  socket.hpp  socket_secure.h  url.h  user_information.h  winsock.h
src/: CMakeLists.txt  endpoint.cc  main.cc  openssl.cc  socket.cc  socket_secure.cc  url.cc  winsock.cc
